# mean-shift-tracking

./: CMakeLists.txt  README.md  main.cpp  meanshift.cpp  meanshift.h
